Change fonts and colors to fix contrast issues

--- a/main.css
+++ b/main.css
@@ -24,13 +24,13 @@ p, h1, h2, h3, h4, h5, h6 {
 
 /* GENERAL */
 :root {
-	--color-primary: #492684;
+	--color-primary: #9663EB;
 	
 	--color-netural-100: #D9D9D9;
-	--color-netural-400: #B0B5BD;
-	--color-netural-700: #353A44;
-	--color-netural-800: #1A1C1E;
-	--color-netural-900: #111315;
+	--color-netural-400: #BEB9C5;
+	--color-netural-700: #373544;
+	--color-netural-800: #1B1A1E;
+	--color-netural-900: #111014;
 
 	--ff-primary: 'Poppins', sans-serif;
 
@@ -49,7 +49,6 @@ body {
 	justify-content: space-between;
 
 	font-family: var(--ff-primary);
-	font-size: .875rem;
 	color: var(--color-netural-400);
 
 	background-color: var(--color-netural-900);
@@ -63,7 +62,7 @@ body {
 }
 
 .site-header__title {
-	font-size: 2rem;
+	font-size: 3rem;
 	color: var(--color-primary);
 }
 
@@ -86,16 +85,17 @@ main {
 }
 
 .link-shortener-form__label {
-	display: flex;
-	flex-direction: column;
-	gap: var(--spacing-1x);
+	display: block;
+	margin-bottom: var(--spacing-1x);
+
+	font-weight: bold;
 }
 
 .link-shortener-form__input {
 	padding: .75rem 1rem;
 	width: 100%;
 
-	border: 1px solid var(--color-netural-700);
+	border: 0;
 	border-radius: var(--border-radius);
 	background-color: var(--color-netural-800);
 
@@ -103,11 +103,18 @@ main {
 }
 
 .link-shortener-form__input::placeholder {
-	color: var(--color-netural-700);
+	color: var(--color-netural-400);
 }
 
 .link-shortener-form__input--right-rounded {
 	border-radius: 0 var(--border-radius) var(--border-radius) 0;
+}
+
+.link-shortener-form__input-border {
+	padding: 1px;
+
+	border-radius: var(--border-radius);
+	background-image: linear-gradient(98deg, var(--color-netural-700), var(--color-netural-900));
 }
 
 .link-shortener-form__input-wrapper {
@@ -130,7 +137,7 @@ main {
 	background-color: var(--color-primary);
 
 	font-weight: bold;
-	color: var(--color-netural-100);
+	color: var(--color-netural-900);
 }
 
 /* SITE FOOTER */
